move images to img to avoid conflict with nft images

--- a/dapp/index.html
+++ b/dapp/index.html
@@ -4,24 +4,24 @@
 <head>
   <meta charset="utf-8">
 
-  <link rel="icon" type="image/png" href="/images/0.png">
+  <link rel="icon" type="image/png" href="/img/0.png">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="theme-color" content="#000000">
   <meta name="description" content="Degen Dogs mix NFTs with DeFi.">
-  <link rel="apple-touch-icon" href="/images/0.png">
+  <link rel="apple-touch-icon" href="/img/0.png">
   <link rel="manifest" href="/manifest.json">
   <!--Open Graph tags-->
   <meta property="og:url" content="https://degendogs.club" />
   <meta property="og:type" content="article" />
   <meta property="og:title" content="Degen Dogs" />
   <meta property="og:description" content="Degen Dogs are NFTs that stream DeFi tokens to holders. Receive a share of future proceeds." />
-  <meta property="og:image" content="https://degendogs.club/images/slide1.png?v=1" />
+  <meta property="og:image" content="https://degendogs.club/img/slide1.png?v=1" />
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@degendogsclub">
   <meta name="twitter:creator" content="@mthacks">
   <meta name="twitter:title" content="Degen Dogs">
   <meta name="twitter:description" content="Degen Dogs are NFTs that stream DeFi tokens to holders. Receive a share of future proceeds.">
-  <meta name="twitter:image" content="https://degendogs.club/images/slide1.png?v=1">
+  <meta name="twitter:image" content="https://degendogs.club/img/slide1.png?v=1">
 
   <!--END Open Graph tags-->
   <title>Degen Dogs Club</title>
@@ -43,21 +43,21 @@
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
           <a class="NavBar_navBarBrand__1hw3w navbar-brand" href="/"><img
-              src="/images/192x192.png" width="85" height="85" class="d-inline-block align-middle"
+              src="/img/192x192.png" width="85" height="85" class="d-inline-block align-middle"
               alt="Degen Dogs Club logo"></a>
           <button aria-controls="basic-navbar-nav" type="button"
             aria-label="Toggle navigation" class="navbar-toggler collapsed"><span
               class="navbar-toggler-icon"></span></button>
           <a target="_blank" rel="noreferrer"
           href="https://polygonscan.com/address/0xb6021d0b1e63596911f2cCeEF5c14f2db8f28Ce1"
-          class="NavBar_nounsNavLink__1_qpP nav-link">TREASURY: <span id="treasury">0</span> <img src="/images/idleWETH.png" alt="idleWETH" title="idleWETHx" style="height: 16px;"></span>
+          class="NavBar_nounsNavLink__1_qpP nav-link">TREASURY: <span id="treasury">0</span> <img src="/img/idleWETH.png" alt="idleWETH" title="idleWETHx" style="height: 16px;"></span>
           </a>
           <div class="justify-content-end navbar-collapse collapse">
             <a href="https://docs.degendogs.club/" id="dao-nav" class="NavBar_nounsNavLink__1_qpP nav-link">DOCS</a>
             <div class="nav-item connected">
               <a target="_blank" rel="noreferrer"
                 href="https://app.superfluid.finance/dashboard"
-                class="NavBar_nounsNavLink__1_qpP nav-link add-to-metamask" data-token="idleWETHx"><span id="account">0</span> <img src="/images/idleWETH.svg" alt="idleWETHx" title="idleWETHx" style="height: 16px;"></a></span>
+                class="NavBar_nounsNavLink__1_qpP nav-link add-to-metamask" data-token="idleWETHx"><span id="account">0</span> <img src="/img/idleWETH.svg" alt="idleWETHx" title="idleWETHx" style="height: 16px;"></a></span>
               </a>
             </div>
             <div class="nav-item connected" id="nav-claim">
@@ -70,7 +70,7 @@
             <div class="nav-item connected">
               <a rel="noreferrer" id="bsct-token"
                 href="#"
-                class="NavBar_nounsNavLink__1_qpP nav-link add-to-metamask" data-token="BSCT"><span id="bsct">0</span> <img src="/images/BSCT.png" alt="BSCT" title="BSCT" style="height: 16px;"></span>
+                class="NavBar_nounsNavLink__1_qpP nav-link add-to-metamask" data-token="BSCT"><span id="bsct">0</span> <img src="/img/BSCT.png" alt="BSCT" title="BSCT" style="height: 16px;"></span>
               </a>
             </div>
             <a href="#" class="NavBar_nounsNavLink__1_qpP NavBar_connectBtn__1uOYH nav-link connect" role="button">CONNECT WALLET</a>
@@ -81,7 +81,7 @@
         <div class="row">
           <div class="Auction_nounContentCol__1o5ER col-lg-6">
             <div class="Auction_nounWrapper__3JSNc"><img id="dog-image"
-                src="https://degendogs.club/images/dog336.png"
+                src="https://degendogs.club/img/dog336.png"
                 alt="Degen Dogs Club" class="Noun_img__1GJxo img-fluid"></div>
           </div>
           <div class="Auction_auctionActivityCol__3U2jw col-lg-6">
@@ -150,7 +150,7 @@
             </div>
             <div class="col-lg-6">
               <div style="padding: 2rem;"><img
-                  src="/images/1.png"
+                  src="/img/1.png"
                   alt="noun" class="Noun_img__1GJxo img-fluid"></div>
             </div>
           </div>
@@ -163,34 +163,34 @@
               <div class="justify-content-md-center row">
                 <div class="HistoryCollection_historyCollection__2Shui">
                   <img
-                    src="/images/2.png"
+                    src="/img/2.png"
                     alt="Degen Dogs Club" class="Noun_img__1GJxo img-fluid">
                   <img
-                    src="/images/3.png"
+                    src="/img/3.png"
                     alt="Degen Dogs Club" class="Noun_img__1GJxo img-fluid">
                   <img
-                    src="/images/4.png"
+                    src="/img/4.png"
                     alt="Degen Dogs Club" class="Noun_img__1GJxo img-fluid">
                   <img
-                    src="/images/5.png"
+                    src="/img/5.png"
                     alt="Degen Dogs Club" class="Noun_img__1GJxo img-fluid">
                   <img
-                    src="/images/6.png"
+                    src="/img/6.png"
                     alt="Degen Dogs Club" class="Noun_img__1GJxo img-fluid">
                   <img
-                    src="/images/7.png"
+                    src="/img/7.png"
                     alt="Degen Dogs Club" class="Noun_img__1GJxo img-fluid">
                   <img
-                    src="/images/8.png"
+                    src="/img/8.png"
                     alt="Degen Dogs Club" class="Noun_img__1GJxo img-fluid">
                   <img
-                    src="/images/9.png"
+                    src="/img/9.png"
                     alt="Degen Dogs Club" class="Noun_img__1GJxo img-fluid">
                   <img
-                    src="/images/10.png"
+                    src="/img/10.png"
                     alt="Degen Dogs Club" class="Noun_img__1GJxo img-fluid">
                   <img
-                    src="/images/11.png"
+                    src="/img/11.png"
                     alt="Degen Dogs Club" class="Noun_img__1GJxo img-fluid">
                 </div>
               </div>
@@ -309,7 +309,7 @@
   <script src="https://cdn.ethers.io/lib/ethers-5.1.umd.min.js" type="text/javascript"></script>  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
   <script src="/js/abis.js?v=7"></script>
-  <script src="/js/dapp.js?v=71"></script>
+  <script src="/js/dapp.js?v=72"></script>
 
 </body>
 
